# Orby-Glasses

./: .gitignore  .pre-commit-config.yaml  ANALYSIS.md  ARCHITECTURE.md  BLIND_USER_GUIDE.md  BREAKTHROUGH_FEATURES.md  BUGFIX_DEPTH_NONE.md  CAMERA_1_AND_DENSE_RECON.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_SETUP_GUIDE.md  CONTRIBUTING.md  CONVERSATIONAL_NAVIGATION.md  DEEP_ANALYSIS_COMPLETE.md  DEMO_README.md  DEMO_SCRIPT.md  DEPLOYMENT_SUMMARY.md  DEVELOPER.md  Dockerfile  ENABLE_VO_MODE.md  FEATURE_MATCHING_FINAL.md  FEATURE_MATCHING_MODE.md  FEATURE_VISUALIZATION_GUIDE.md  FINAL_INTEGRATION_STATUS.md  FINAL_PERFORMANCE_SUMMARY.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  FIX_PYSLAM_COMPLETE.md  FIX_RELOCALIZATION.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  INTEGRATION_COMPLETE.md  INTELLIGENCE.md  INTERACTIVE_GRID_GUIDE.md  LICENSE  MANIFEST.in  MODE_EXPLANATION.md  MODE_USAGE.md  OPTIMIZATIONS_SUMMARY.md  OPTIMIZATION_SUMMARY.md  (+87 more)
config/: best.yaml  config.yaml  config_fast.yaml  config_fast_slam.yaml  config_production.yaml  fast.yaml
data/logs/: session_20251018_140234.jsonl  session_20251018_141022.jsonl  session_20251018_141146.jsonl  session_20251018_141436.jsonl  session_20251018_141722.jsonl  session_20251018_142038.jsonl  session_20251018_142721.jsonl  session_20251018_142816.jsonl
docs/: ANALYSIS_REPORT_2025.md  ARCHITECTURE_2025.md  BREAKTHROUGH_FEATURES_SUMMARY.md  DENSE_RECONSTRUCTION.md  DEVELOPER.md  OCCUPANCY_GRID_3D.md  OPTIMIZATION_2024.md  PROJECT_STRUCTURE.md  PYSLAM_MODIFICATIONS.md  QUICKSTART.md  REALTIME_DENSE_MAPPING.md  RELOCALIZATION_TUNING.md  SLAM_CONTRIBUTION.md  SLAM_IMPROVEMENTS.md  SLAM_INDOOR_NAVIGATION.md  SLAM_PERFORMANCE.md  SLAM_TEST_SUMMARY.md  TECHNICAL_DOCS.md  TRAJECTORY_PREDICTION.md  UNDERSTANDING_GNN.md  USER_GUIDE.md  USER_GUIDE_2025.md  USER_STUDY_GUIDE.md  VOICE_INPUT_FIX.md  orbyglasses_case_study.md
src/: audio_priority.py  blind_navigation.py  conversation.py  demo_overlay.py  detection.py  echolocation.py  error_handler.py  feature_matching_standalone.py  indoor_navigation.py  main.py  main_simple.py  mapping3d.py  minimal_ui.py  movement_visualizer.py  narrative.py  object_tracker.py  occupancy_grid_3d.py  point_cloud_viewer.py  robot_ui.py  safety_system.py  slam.py  slam_map_viewer.py  slam_system.py  smart_cache.py  social_navigation.py  utils.py
src/core/: __init__.py  adaptive_system.py  depth_anything_v2.py  detection.py  echolocation.py  emergency_stop.py  fast_audio.py  gpu_check.py  health_monitor.py  llm_manager.py  narrative.py  safety_system.py  smart_cache.py  stair_detection.py  system_integration.py  utils.py  yolo_world_detector.py  zenoh_pipeline.py
src/features/: __init__.py  conversation.py  coordinate_transformer.py  haptic_feedback_2025.py  mapping3d.py  occupancy_grid_3d.py  point_cloud_viewer.py  prediction.py  scene_understanding.py  simple_conversation.py  social_navigation.py  trajectory_prediction.py  voxel_map.py
src/navigation/: __init__.py  accurate_slam.py  advanced_monocular_slam.py  droid_slam_wrapper.py  improved_slam.py  indoor_navigation.py  pyslam_live.py  (+21 more)
tests/: README.md  test_audio_complete.py  test_audio_fix.py  test_depth_visualizer_2025.py  test_detection.py  test_echolocation.py  test_enhanced_slam.py  test_improved_prompts.py  test_integration.py  test_interactive_grid.py  test_new_modules.py  test_occupancy_grid_3d.py  test_ollama_audio.py  test_slam.py  test_slam_accuracy.py  test_slam_improvements.py  test_social_navigation_integration.py  test_trajectory_prediction.py  test_utils.py
tools/: demo_new_features.py
(+4 files in other folders)
