[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbglasses"
version = "0.9.0"
description = "AI-powered navigation assistant for blind and visually impaired users"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "OrbyGlasses Contributors"}
]
maintainers = [
    {name = "OrbyGlasses Contributors"}
]
keywords = [
    "accessibility",
    "navigation",
    "computer-vision",
    "blind",
    "assistive-technology",
    "SLAM",
    "object-detection",
    "depth-estimation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Video :: Capture",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.36.0",
    "huggingface_hub>=0.20.0",
    "timm>=0.9.0",
    "pillow>=10.0.0",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.90",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",
    "SpeechRecognition>=3.10.0",
    "ollama>=0.1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "colorlog>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/OrbyGlasses"
Documentation = "https://github.com/yourusername/OrbyGlasses/wiki"
Repository = "https://github.com/yourusername/OrbyGlasses"
"Bug Tracker" = "https://github.com/yourusername/OrbyGlasses/issues"
Changelog = "https://github.com/yourusername/OrbyGlasses/blob/main/CHANGELOG.md"

[project.scripts]
orbglasses = "main:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | build
  | dist
  | third_party
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "third_party",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["third_party/", "venv/"]
